# Agentic-Chat-PostgreSQL-Memory

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agentchat/: app.py
agentchat/agents/: agent.py  chain.py  chatbot.py  tools.py
agentchat/api/: endpoints.py  schema.py
agentchat/api/file_handler/: chat_service.py  file_processor.py  response_serializer.py  validators.py
agentchat/core/: settings.py
sample_file/: workout.txt
