[project]
name = "agentchat"
version = "0.1.0"
description = ""
authors = [
    {name = "ThanAid",email = "thanos.aidinis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "psycopg (>=3.2.6,<4.0.0)",
    "psycopg-pool (>=3.2.6,<4.0.0)",
    "langgraph (>=0.3.24,<0.4.0)",
    "langgraph-checkpoint-postgres (>=2.0.19,<3.0.0)",
    "langchain-openai (>=0.3.12,<0.4.0)",
    "psycopg-binary (>=3.2.6,<4.0.0)",
    "langchain (>=0.3.22,<0.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
